# Oz_Backand

./: .gitignore  README.md
LocalStoryMap/: .python-version  manage.py  markers.csv  pyproject.toml
LocalStoryMap/ai_service/: models.py  serializers.py  urls.py  views.py
LocalStoryMap/ai_service/migrations/: 0001_initial.py
LocalStoryMap/ai_service/utils/: clova_client.py
LocalStoryMap/apps/ai_service/: apps.py  models.py  serializers.py  views.py
LocalStoryMap/apps/ai_service/migrations/: 0001_initial.py  0002_delete_location.py
LocalStoryMap/apps/ai_service/utils/: clova_client.py
LocalStoryMap/apps/bookmark/: models.py  serializers.py  urls.py  views.py
LocalStoryMap/apps/bookmark/migrations/: 0001_initial.py
LocalStoryMap/apps/follows/: apps.py  models.py  serializers.py  urls.py  views.py
LocalStoryMap/apps/follows/migrations/: 0001_initial.py
LocalStoryMap/apps/marker/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
LocalStoryMap/apps/marker/migrations/: 0001_initial.py  0002_alter_marker_adress.py  0003_marker_layer.py  0004_alter_marker_layer.py  0005_marker_like_count.py  0006_marker_story_alter_marker_layer.py  0007_marker_summary_text.py  0008_alter_marker_image.py  0009_alter_marker_image.py
LocalStoryMap/apps/marker_like/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
LocalStoryMap/apps/marker_like/migrations/: 0001_initial.py
LocalStoryMap/apps/notifications/: consumers.py  middleware.py  models.py  serializers.py  urls.py  views.py
LocalStoryMap/apps/notifications/migrations/: 0001_initial.py  0002_alter_notificationsetting_type_notification.py
LocalStoryMap/apps/paymenthistory/: apis.py  apps.py  models.py  serializers.py  urls.py
LocalStoryMap/apps/paymenthistory/migrations/: 0001_initial.py  0002_paymenthistory_is_delete.py
LocalStoryMap/apps/route/: models.py  serializers.py  services.py  urls.py  views.py
LocalStoryMap/apps/route/migrations/: 0001_initial.py  0002_route_like_count.py
LocalStoryMap/apps/route_like/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
LocalStoryMap/apps/route_like/migrations/: 0001_initial.py
LocalStoryMap/apps/route_marker/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
LocalStoryMap/apps/route_marker/migrations/: 0001_initial.py
LocalStoryMap/apps/search/: apps.py  models.py  serializers.py  urls.py  views.py
LocalStoryMap/apps/search/migrations/: 0001_initial.py  0002_delete_searchhistory.py
LocalStoryMap/apps/story/: apis.py  models.py  serializers.py  urls.py
LocalStoryMap/apps/story/migrations/: 0001_initial.py  0002_storycomment_like_count_alter_storycomment_content.py  0003_alter_story_emoji.py  0004_commentlike_like_count_storylike_like_count.py
LocalStoryMap/apps/storyimage/: apps.py  models.py  serializers.py  urls.py  views.py
LocalStoryMap/apps/storyimage/migrations/: 0001_initial.py  0002_alter_storyimage_story_delete_story.py  0003_storyimage_user.py  0004_alter_storyimage_image_file.py
LocalStoryMap/apps/subscribes/: apis.py  apps.py  models.py  permissions.py  serializers.py  urls.py
LocalStoryMap/apps/subscribes/migrations/: 0001_initial.py
LocalStoryMap/apps/subscribes/services/: __init__.py  payment.py
LocalStoryMap/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
LocalStoryMap/apps/users/migrations/: 0001_initial.py  (+7 more)
LocalStoryMap/config/: asgi.py  custom_exception_handler.py  middleware.py  renderers.py  settings.py  urls.py  wsgi.py
LocalStoryMap/config/settings/: __init__.py  base.py  dev.py  prod.py
LocalStoryMap/config/urls/: __init__.py  urls_base.py  urls_dev.py  urls_prod.py
(+4 files in other folders)
