[tool.poetry]
name = "localstorymap"
version = "0.1.0"
description = ""
authors = ["Alex424525 <sht914@gmail.com>"]
package-mode = false  # 패키지 모드 비활성화

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
djangorestframework = "^3.16.0"
django-storages = "^1.14.6"
requests = "^2.32.3"
django-cors-headers = "^4.7.0"
redis = "^6.1.0"
django-redis = "^5.4.0"
gunicorn = "^23.0.0"
boto3 = "1.35.99"
sentry-sdk = "^2.29.1"

[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
drf-yasg = "^1.21.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
